Revised MA 1, added EA 12.6-9.

--- a/01_agama/ekottarika/12/EA_12_05.md
+++ b/01_agama/ekottarika/12/EA_12_05.md
@@ -4,7 +4,8 @@ title: 'The Numerical Discourses | Chapter 12: The Single Entry Path | 5. Praise
 type: kramdown
 base: ../../../
 previous: EA_12_04.html
-next: ../19/EA_19_01.html
+next: EA_12_06.html
+
 ---
 
 # [The Numerical Discourses](../index.html)
