--- a/01_agama/madhyama/MA_001.md
+++ b/01_agama/madhyama/MA_001.md
@@ -8,129 +8,131 @@ next: MA_002.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 1: Sevens
+## Chapter 1: The Sevens
 ### 1. The Good Dharma
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
-{: #p1}
+{:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven things, then he’ll attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? A monk knows the teaching, knows the meaning, knows the time, knows moderation, knows himself, knows the assembly, and knows the superiority of people.
-{: #p2}
+2\. It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven things, then he’ll attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? A monk knows the teaching, knows the meaning, knows the time, knows moderation, knows himself, knows the community, and knows the superiority of people.
+{:#p2}
 
 #### Knowing the Teaching
 
 3\. “How does a monk know the teaching? A monk knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.[\[2\]](#n2){:#ref2} This is called a monk who knows the teaching.
-{: #p3}
+{:#p3}
 
 4\. “Suppose a monk doesn’t know the teaching, which is to say that he doesn’t know the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. Such a monk doesn’t know the teaching.
-{: #p4}
+{:#p4}
 
-5\. “Suppose a monk well knows the teaching, which is to say that he knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. This is called a monk who well knows the teaching.
-{: #p5}
+5\. “Suppose a monk knows the teaching well, which is to say that he knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. This is called a monk who knows the teaching well.
+{:#p5}
 
 #### Knowing the Meaning
 
-6\. “How does a monk know the meaning? A monk knows that the meaning of this or that expression is this meaning or that meaning. This is called a monk who knows the meaning.
-{: #p6}
+6\. “How does a monk know the meaning? A monk knows that this or that expression has this or that meaning. This is called a monk who knows the meaning.
+{:#p6}
 
-7\. “Suppose a monk doesn’t know the meaning, which is to say that he doesn’t know that the meaning of this or that expression is this meaning or that meaning. Such a monk doesn’t know the meaning.
-{: #p7}
+7\. “Suppose a monk doesn’t know the meaning, which is to say that he doesn’t know that this or that expression has this or that meaning. Such a monk doesn’t know the meaning.
+{:#p7}
 
-8\. “Suppose a monk well knows the meaning, [421b] which is to say that he knows that the meaning of this or that expression is this meaning or that meaning. This is called a monk who well knows the meaning.
-{: #p8}
+8\. “Suppose a monk knows the meaning well, which is to say that he knows that this or that expression has this or that meaning. This is called a monk who knows the meaning well.
+{:#p8}
 
 #### Knowing the Time
 
-9\. “How does a monk know the time? A monk knows the time to cultivate low appearances, the time to cultivate high appearances, and the time to cultivate indifferent appearances.[\[3\]](#n3){:#ref3} This is called a monk who knows the time.
-{: #p9}
+9\. “How does a monk know the time? A monk knows the time to cultivate a humble appearance, the time to cultivate a dignified appearance, and the time to cultivate an indifferent appearance.[\[3\]](#n3){:#ref3} This is called a monk who knows the time.
+{:#p9}
 
-10\. “Suppose a monk doesn’t know the time, which is to say that he doesn’t know the time to cultivate low appearances, the time to cultivate high appearances, and the time to cultivate indifferent appearances. Such a monk doesn’t know the time.
-{: #p10}
+10\. “Suppose a monk doesn’t know the time, which is to say that he doesn’t know the time to cultivate a humble appearance, the time to cultivate a dignified appearance, and the time to cultivate an indifferent appearance. Such a monk doesn’t know the time.
+{:#p10}
 
-11\. “Suppose a monk well knows the time, which is to say that he knows the time to cultivate low appearances, the time to cultivate high appearances, and the time to cultivate indifferent appearances. This is called a monk who well knows the time.
-{: #p11}
+11\. “Suppose a monk knows the time well, which is to say that he knows the time to cultivate a humble appearance, the time to cultivate a dignified appearance, and the time to cultivate an indifferent appearance. This is called a monk who knows the time well.
+{:#p11}
 
 #### Knowing Moderation
 
-12\. “How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself,[\[4\]](#n4){:#ref4} rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation.
-{: #p12}
+12\. “How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge.[\[4\]](#n4){:#ref4} This is called a monk who knows moderation.
+{:#p12}
 
 13\. “Suppose a monk doesn’t know moderation, which is to say that he doesn’t know it whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. Such a monk doesn’t know moderation.
-{: #p13}
+{:#p13}
 
-14\. “Suppose a monk who well knows moderation, which is to say that he well knows it whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. This is called a monk who well knows moderation.
-{: #p14}
+14\. “Suppose a monk knows moderation well, which is to say that he knows it well whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation well.
+{:#p14}
 
-#### Knowing Himeself
+#### Knowing Himself
 
 15\. “How does a monk know himself? It means a monk knows, ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who knows himself.
-{: #p15}
+{:#p15}
 
 16\. “Suppose a monk doesn’t know himself, which is to say that he doesn’t know, ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ Such a monk doesn’t know himself.
-{: #p16}
+{:#p16}
 
-17\. “Suppose a monk well knows himself, which is to say that he knows, ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who well knows himself.
-{: #p17}
+17\. “Suppose a monk knows himself well, which is to say that he knows, ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who knows himself well.
+{:#p17}
 
-#### Knowing the Assembly
+#### Knowing the Community
 
-18\. “How does a monk know the assembly? A monk knows: ‘This is an assembly of warriors … this is an assembly of priests … this is an assembly of householders … this is an assembly of ascetics.[\[5\]](#n5){:#ref5} In that assembly, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who knows the assembly.
-{: #p18}
+18\. “How does a monk know the community? A monk knows: ‘This is an community of warriors … this is an community of priests … this is an community of householders … this is an community of ascetics.[\[5\]](#n5){:#ref5} In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ This is called a monk who knows the community.
+{:#p18}
 
-19\. “Suppose a monk doesn’t know the assembly, which is to say that he doesn’t know: ‘This is an assembly of warriors … this is an assembly of priests … this is an assembly of householders … this is an assembly of ascetics. In that assembly, I should thus [421c] depart, thus stand, thus sit, thus speak, and thus be silent.’ Such a monk doesn’t know the assembly.
-{: #p19}
+19\. “Suppose a monk doesn’t know the community, which is to say that he doesn’t know: ‘This is an community of warriors … this is an community of priests … this is an community of householders … this is an community of ascetics. In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ Such a monk doesn’t know the community.
+{:#p19}
 
-20\. “Suppose a monk well knows the assembly, which is to say that he well knows: ‘This is an assembly of warriors … this is an assembly of priests … this is an assembly of householders … this is an assembly of ascetics. In that assembly, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who well knows the assembly.
-{: #p20}
+20\. “Suppose a monk well knows the community, which is to say that he well knows: ‘This is an community of warriors … this is an community of priests … this is an community of householders … this is an community of ascetics. In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ This is called a monk who well knows the community.
+{:#p20}
 
 #### Knowing the Superiority of People
 
 21\. “How does a monk know the superiority of people? A monk knows there are two kinds of people: believers and non-believers. If someone is a believer, they’re superior; a non-believer is not.
-{: #p21}
+{:#p21}
 
-22\. “Also, there are two kinds of believers: those who frequently go to see the monks and those who don’t frequently go to see the monks. If someone frequently goes to see the monks, they’re superior; someone who doesn’t frequently go to see the monks is not.
-{: #p22}
+22\. “Also, there are two kinds of believers: those who frequently visit the monks and those who don’t frequently visit the monks. If someone frequently visits the monks, they’re superior; someone who doesn’t frequently visit the monks is not.
+{:#p22}
 
-23\. “Also, there are two kinds of people who frequently go to see the monks: those who revere the monks and those who don’t revere the monks. If someone reveres the monks, they’re superior; someone who doesn’t revere the monks is not.
-{: #p23}
+23\. “Also, there are two kinds of people who frequently visit the monks: those who revere the monks and those who don’t revere the monks. If someone reveres the monks, they’re superior; someone who doesn’t revere the monks is not.
+{:#p23}
 
 24\. “Also, there are two kinds of people who revere the monks: those who have questions about the sūtras and those who don’t have questions about the sūtras. If someone asks about the sūtras, they’re superior; someone who doesn’t ask about the sūtras is not.
-{: #p24}
+{:#p24}
 
 25\. “Also, there are two kinds of people who ask about the sūtras: those who whole-heartedly listen to the sūtras and those who don’t whole-heartedly listen to the sūtras. If someone whole-heartedly listens to the sūtras, they’re superior; someone who doesn’t whole-heartedly listen to the sūtras is not.
-{: #p25}
+{:#p25}
 
 26\. “Also, there are two kinds of people who whole-heartedly listen to the sūtras: those who hear and retain the teaching and those who hear but don’t retain the teaching. If someone hears and retains the teaching, they’re superior; someone who hears but doesn’t retain the teaching is not.
-{: #p26}
+{:#p26}
 
 27\. “Also, there are two kinds of people who hear and retain the teaching: those who hear the teaching and contemplate its meaning and those who hear the teaching but don’t contemplate its meaning. If someone hears the teaching and contemplates its meaning, they’re superior; someone who hears the teaching but doesn’t contemplate its meaning is not.
-{: #p27}
+{:#p27}
 
-28\. “Also, there are two kinds of people who hear the teaching and contemplate its meaning: those who know the teaching, know its meaning, go from one teaching to the next, conform to the teaching, and conduct themselves according to the teaching and those who don’t know the teaching, don’t know its meaning, don’t go from one teaching to the next, don’t conform to the teaching, and don’t conduct themselves according to the teaching. If someone knows the teaching, knows its meaning, goes from one teaching to the next, conforms to the teaching, and conducts themselves according to the teaching, they’re superior. Someone who doesn’t know the teaching, doesn’t know its meaning, doesn’t go from one teaching to the next, doesn’t conform to the teaching, and doesn’t conduct themselves according to the teaching is not.
-{: #p28}
+28\. “Also, there are two kinds of people who hear the teaching and contemplate its meaning: There are those who know the teaching, know its meaning, go from one principle to the next, conform to the teaching, and conduct themselves according to the teaching. Then, there are those who don’t know the teaching, don’t know its meaning, don’t go from one principle to the next, don’t conform to the teaching, and don’t conduct themselves according to the teaching. If someone knows the teaching, knows its meaning, goes from one principle to the next, conforms to the teaching, and conducts themselves according to the teaching, they’re superior. Someone who doesn’t know the teaching, doesn’t know its meaning, doesn’t go from one principle to the next, doesn’t conform to the teaching, and doesn’t conduct themselves according to the teaching is not.
+{:#p28}
 
-29\. “It also means that there are two kinds of people who know the teaching, know its meaning, go from one teaching to the next, conform to the teaching, and conduct themselves according to the teaching: those who benefit themselves, benefit others, benefit many people, pity the world, [422a] seek both meaning and benefit for gods and humans, and seek peace and happiness and those who don’t benefit themselves, don’t benefit others, don’t benefit many people, don’t pity the world, don’t seek both meaning and benefit for gods and humans, and don’t seek peace and happiness. If someone benefits themselves, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness, this person is the very best among people. They’re great, higher, exceptional, superior, honored, and marvelous.
-{: #p29}
+29\. “It also means that there are two kinds of people who know the teaching, know its meaning, go from one principle to the next, conform to the teaching, and conduct themselves according to the teaching: There are those who benefit themselves, benefit others, benefit many people, pity the world, seek both meaning and benefit for gods and humans, and seek peace and happiness. Then, there are those who don’t benefit themselves, don’t benefit others, don’t benefit many people, don’t pity the world, don’t seek both meaning and benefit for gods and humans, and don’t seek peace and happiness. If someone benefits themselves, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness, this person is the very best among people. They’re great, higher, exceptional, superior, honored, and marvelous.
+{:#p29}
 
-30\. “It’s just as there’s milk because of the cow, cream because of milk, butter because of cream, refined butter because of butter, and ghee because of refined butter. Ghee is the very best of those things. It’s great, higher, exceptional, superior, honored, and marvelous. Such is the person who benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness. Of these pairs of people as they’ve been described, as they’ve been discerned, and as they’ve been defined, they’re the best, great, higher, exceptional, superior, honored, and marvelous. This is called a monk who knows the superiority of people.”
-{: #p30}
+30\. “Just as there’s milk because of a cow, there’s cream because of milk, butter because of cream, refined butter because of butter, and ghee because of refined butter. Ghee is the very best of those things. It’s great, higher, exceptional, superior, honored, and marvelous. Such is the person who benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness. Of these pairs of people as they’ve been described, as they’ve been discerned, and as they’ve been defined, they’re the best, great, higher, exceptional, superior, honored, and marvelous. This is called a monk who knows the superiority of people.”
+{:#p30}
 
-31\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
-{: #p31}
+31\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
+{:#p31}
+
+---
 
 ### Notes
 
-1. {:#n1} An alternative reading of this sutra’s title is “Good Qualities.” Parallels include [AN 7.68](https://suttacentral.net/an7.68){: target="_blank"}, [EĀ 39.1](https://suttacentral.net/ea39.1){: target="_blank"}, [T27](https://suttacentral.net/t27){: target="_blank"}, and a passage in the *Saṃgītiparyāya Abhidharma* (T1536.437b18-c10). [\[back\]](#ref1)
-2. {:#n2} This is the traditional list of 12 types of sūtras found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (gāthā), and it varies in other sources. Using the traditional Skt interpretations of itivṛttaka, vyākaraṇa, and udāna as the primary clues, I arrive at this list: sūtra, geya, vyākaraṇa, gāthā, nidāna, itivṛttaka, avadāna, udāna, jātaka, vaipulya, adbhuta-dharma, and upadeśa. [\[back\]](#ref2)
-3. {:#n3} This passage is cryptic. A parallel passage in Xuanzang’s translation of the *Saṃgītiparyāya Abhidharma* (T1536.437b24-26) reads: “this is a time he should cultivate calm appearances … active appearances … indifferent appearances.” This seems to refer to a monk’s social manner or daily activities. [\[back\]](#ref3)
-4. {:#n4} *Relieving himself*. The Chinese expression is a euphemism for defecating and urinating. [\[back\]](#ref4)
-5. {:#n5} *warriors … priests … householders … ascetics*. Skt. kṣatriya, brāhmaṇa, gṛhapati, and śramaṇa. The warriors were in later eras the nobility of India, being the heads of government. Householders were well-to-do and influential people due to wealth, but they weren’t part of the nobility or priesthood. Ascetics were spiritual practitioners and leaders who had left secular life and taken vows of poverty. [\[back\]](#ref5)
+1. {:#n1} An alternative reading of this <em>sūtra</em>’s title is “Good Qualities.” Parallels include <a href="https://suttacentral.net/an7.68" target="_blank">AN 7.68</a>, EĀ 39.1, T27, and a quotation in the <em>Abhidharma Saṃgītiparyāya</em> (T1536.437b18-c10). [\[back\]](#ref1)
+2. {:#n2} This is the traditional list of twelve (sometimes nine) types of <em>sūtra</em>s found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (<em>gāthā</em>), and the order varies from source to source. Using the traditional S. interpretations of <em>itivṛttaka</em>, <em>vyākaraṇa</em>, and <em>udāna</em> as clues, I arrive at this list: S. <em>sūtra</em>, <em>geya</em>, <em>vyākaraṇa</em>, <em>gāthā</em>, <em>nidāna</em>, <em>itivṛttaka</em>, <em>avadāna</em>, <em>udāna</em>, <em>jātaka</em>, <em>vaipulya</em>, <em>adbhuta-dharma</em>, and <em>upadeśa</em>. [\[back\]](#ref2)
+3. {:#n3} This passage is cryptic. A parallel passage in Xuanzang’s translation of the <em>Abhidharma Saṃgītiparyāya</em> (T1536.437b24-26) reads: “This is a time he should cultivate calm appearances … active appearances … indifferent appearances” (謂此時應修止相⋯舉相⋯捨相等). This seems to refer to a monk’s disposition or daily activities. I’ve translated the passage here in terms of social position. [\[back\]](#ref3)
+4. {:#n4} <em>relieving himself</em>. C. 大小便. The Chinese expression is a euphemism for defecating and urinating. [\[back\]](#ref4)
+5. {:#n5} <em>warriors … priests … householders … ascetics</em>. S. <em>kṣatriya</em>, <em>brāhmaṇa</em>, <em>gṛhapati</em>, and <em>śramaṇa</em>. The warriors were in later eras the nobility of India, being the heads of government and the military. Householders were well-to-do and influential people due to wealth like today’s urban middle class, but they weren’t part of the nobility or priesthood. Ascetics were spiritual practitioners and leaders who had left secular life, taken vows of poverty, and adopted a nomadic life. [\[back\]](#ref5)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 8 January 2021
+Last Revised: 30 June 2023
 {: .revised}
 
 ---
