--- a/01_agama/ekottarika/12/EA_12_09.md
+++ b/01_agama/ekottarika/12/EA_12_09.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | Chapter 12: The Single Entry Path | 9. Skin'
 type: kramdown
 base: ../../../
 previous: EA_12_08.html
-next: ../19/EA_19_01.html
+next: EA_12_10.html
 ---
 
 # [The Numerical Discourses](../index.html)
