--- a/01_agama/ekottarika/02/EA_02_10.md
+++ b/01_agama/ekottarika/02/EA_02_10.md
@@ -23,7 +23,7 @@ next: ../03/EA_03_01.html
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
-###### Summary Verse
+##### Summary Verse
 * {:.verse}Recollection of the Buddha, Dharma, and noble Saṅgha;\\
 Recollection of precepts, generosity, and gods;\\
 Recollection of peace and breathing;\\
