--- a/01_agama/ekottarika/03/EA_03_10.md
+++ b/01_agama/ekottarika/03/EA_03_10.md
@@ -43,6 +43,8 @@ They replied, “Yes, Bhagavān.”
 10\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p10}
 
+##### Summary Verse
+
 * {:.verse}The Buddha, Dharma, and noble Saṅgha\\
 Up to the last recollection of death.\\
 Although they share the same name,\\
