--- a/01_agama/ekottarika/08/EA_08_10.md
+++ b/01_agama/ekottarika/08/EA_08_10.md
@@ -23,7 +23,7 @@ next: ../09/EA_09_01.html
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
-###### Summary Verse
+##### Summary Verse
 
 * {:.verse}Asura, beneficial, single-file path,\\
 Light, darkness,\\
