--- a/01_agama/ekottarika/09/EA_09_10.md
+++ b/01_agama/ekottarika/09/EA_09_10.md
@@ -26,6 +26,8 @@ next: ../10/EA_10_01.html
 5\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p5}
 
+##### Summary Verse
+
 * {:.verse}Two laywomen, two on mind,\\
 One on downfall, one on birth in Heaven,\\
 Perceptions that delight men and women,\\
