--- a/01_agama/ekottarika/10/EA_10_10.md
+++ b/01_agama/ekottarika/10/EA_10_10.md
@@ -23,6 +23,8 @@ next: ../11/EA_11_01.html
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
+##### Summary Verse
+
 * {:.verse}Two on no pride, recollecting generosity,\\
 Two on giving, the stingy and the tireless,\\
 Merits of giving, Māra the Wicked One,\\
