--- a/01_agama/ekottarika/11/EA_11_10.md
+++ b/01_agama/ekottarika/11/EA_11_10.md
@@ -78,6 +78,8 @@ And root out the source of that misdeed.”
 19\. When that monks and the fourfold saṅgha heard what the Buddha taught, they rejoiced and approved.
 {:#p19}
 
+##### Summary Verse
+
 * {:.verse}Four kinds of non-returning,\\
 Two on heart, two on alms,\\
 And two <em>sūtra</em>s about Devadatta,\\
