--- a/01_agama/ekottarika/13/EA_13_04.md
+++ b/01_agama/ekottarika/13/EA_13_04.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | Chapter 13: Profit | 4. Nakula'
 type: kramdown
 base: ../../../
 previous: EA_13_03.html
-next: ../19/EA_19_01.html
+next: EA_13_05.html
 ---
 
 # [The Numerical Discourses](../index.html)
