--- a/01_agama/ekottarika/14/EA_14_04.md
+++ b/01_agama/ekottarika/14/EA_14_04.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | Chapter 14: Five Precepts | 4. Generosity'
 type: kramdown
 base: ../../../
 previous: EA_14_03.html
-next: ../19/EA_19_01.html
+next: EA_14_05.html
 ---
 
 # [The Numerical Discourses](../index.html)
