--- a/01_agama/ekottarika/12/EA_12_01.md
+++ b/01_agama/ekottarika/12/EA_12_01.md
@@ -132,7 +132,7 @@ next: EA_12_02.html
 We might wonder why this <em>sūtra</em> has been placed here in the Book of Ones. Wouldn’t the four abodes of mindfulness be better placed in the Book of Fours? It also seems out of place in subject matter compared to the rest of Chapter 12 and in it’s lack of the usual conclusion (“Therefore, monks … Thus, monks, you should train yourselves.”). Like the <a href="../08/EA_08_01.html" target="_blank"><em>Asura Sūtra</em></a> that begins Chapter 8, it was likely a later insertion that interrupted the original flow of this <em>sūtra</em> collection.<br/>
 A larger related issue is that this chapter and the next appear to have become disordered in the Chinese translation, given that Chapter 12 lacks a summary verse and the verse at the end of Chapter 13 appears to reference the last four of its <em>sūtra</em>s. As a result, we can’t be entirely certain if this <em>sūtra</em> was present before it was translated in China or if a later redactor inserted it.<br/>
 Nonetheless, the logic of putting it in the Book of Ones must have been that the topic of the <em>sūtra</em>is ostensibly the single-entry path rather than four abodes of mindfulness. [\[back\]](#ref1)
-2. {:#n2} <em>single-entry path</em>. C. 一入道, G. <em>ekayana maga</em> (?), P. <em>ekāyana magga</em>, S. <em>ekāyana marga</em>. The Indic term equivalent to C. 一入 that’s found in parallels is either S. <em>eka-ayana</em> or <em>eka-āyana</em>. Both have concrete meanings of “one way,” “one approach,” or “single-file.” However, the term also has the pyschological meaning of “fixing the mind on one thing,” i.e., focus or concentration. This is the meaning that this <em>sūtra</em> uses to gloss the term.<br/>
+2. {:#n2} <em>single-entry path</em>. C. 一入道, G. <em>ekayana maga</em> (?), P. <em>ekāyana magga</em>, S. <em>ekāyana marga</em>. The Indic term equivalent to C. 一入 that’s found in parallels is either S. <em>eka-ayana</em> or <em>eka-āyana</em>. Both have concrete meanings of “one way,” “one approach,” or “single-file.” However, the term also has the psychological meaning of “fixing the mind on one thing,” i.e., focus or concentration. This is the meaning that this <em>sūtra</em> uses to gloss the term.<br/>
 However, 一入 lit. means “one entry” in C. It should be noted that S. <em>nyayana</em> means “entry,” and <em>nyayāna</em> means “access way.” Some have pointed out that 入 often translates S. <em>āyatana</em>, which is yet another related word in pronunciation. Its Buddhist meaning of “sense field” echoes the psychological meaning of <em>ekāyana</em>. Thus, it’s difficult to determine the exact G. word that was translated to C., and I’ve yet to find an attestation in extant G. sources. My experience, though, is that the variations that happened in Buddhist Prakrit parallels can be surprising at times. It’s not entirely out of the question that the C. 一入 may have translated an equivalent of S. <em>ekāyatana</em>. [\[back\]](#ref2)
 3. {:#n3} <em>abodes of mindfulness</em>. C. 意止, P. <em>satipaṭṭhāna</em>, S. <em>smṛtyupasthāna</em>. This was an early C. translation, which lit. means “mental calming” or “mental stop.” It’s quite similar to the early translation of S. <em>prahāṇa</em> (~ P. <em>padhāna</em>) as 意斷, which means “mental ending” or “mental excision.” Both were functional rather than literal translations that attempted to capture the basic sense of what the practices acheived. I’ve decided to translate 意止 with my standard “abodes of mindfulness” to avoid confusion. [\[back\]](#ref3)
 4. {:#n4} <em>noble eightfold path</em>. In this passage, right speech has been placed after right method. About a third of the occurrences of the eightfold path in EĀ are inconsistently disordered. Moreover, these disordered lists are clustered in a couple fascicles of the C. translation, suggesting that they are a result of poor maintenance of the text in China. I therefore assume these instances are copyist errors and have corrected the order of the list in this passage accordingly. [\[back\]](#ref4)
