--- a/01_agama/ekottarika/13/EA_13_06.md
+++ b/01_agama/ekottarika/13/EA_13_06.md
@@ -32,7 +32,7 @@ Please give me a teaching on this subject,\\
 So I’ll know the gist of the Śākyan’s thought\\
 And get an explanation on giving.”
 
-* {:.verse}The four who make merit for cessation,[\[3\]](#n3){:#ref3}\\
+* {:.verse}“The four who make merit for cessation,[\[3\]](#n3){:#ref3}\\
 And the four who’ve fully achieved the fruits.\\
 It’s the trainees and realizers of the path\\
 Who ought to be believed, their Dharma served.
@@ -52,7 +52,7 @@ Like the treasures that come from the ocean.\\
 The noble assemblies are just the same,\\
 For they explain the wise Dharma of light.”
 
-* {:.verse}“Kauśika,[\[4\]](#n4){:#ref4} a good place is\\
+* {:.verse}Kauśika,[\[4\]](#n4){:#ref4} a good place is\\
 Where one can give to the Saṅgha.\\
 They’ll obtain merits inestimable,\\
 For their teaching is the Supreme Victor’s.”
